# Fwankie

./: .gitignore  CMakeLists.txt  IntVector.h  README.md  Transform.h  stub.txt
Box2D fake/: HGEDebugDraw.cpp  HGEDebugDraw.h  TestBedHGE.cpp
Box2D fake/Box2D/: CMakeCache.txt
CMake/: GenerateVcxprojUserSettings.cmake  ScanSourceFiles.cmake  UserTemplate.template
bin_debug/: BasicHLSL11_PS.hlsl  BasicHLSL11_VS.hlsl  RPG.ilk  UserKeySetting.txt  hge.ilk
engine/: CMakeLists.txt
engine/include/: EngineLoop.h
hge/core/: CMakeLists.txt
hge/core/Release/hge-static.tlog/: CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
hge/core/Release/hge.tlog/: CL.read.1.tlog  cl.command.1.tlog  custombuild.read.1.tlog  hge.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
hge/core/include/: hge_impl.h
hge/core/src/: graphics.cpp  system.cpp
hge/coredx11/: CMakeLists.txt
hge/coredx11/include/: hge.h  hge_impl.h
hge/coredx11/src/: WICTextureLoader.cpp  demo.cpp  graphics.cpp  system.cpp
hge/helpers/: CMakeLists.txt
hge/helpers/Release/hgehelpers.tlog/: CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
hge/helpers/include/: hge.h  hge_gapi.h  hgeanim.h  hgesprite.h  parser.h  resources.h
hge/helpers/src/: hgeanim.cpp  hgefont.cpp  hgegui.cpp  hgeguictrls.cpp  hgeresource.cpp  hgesprite.cpp  hgestrings.cpp  resources.cpp
hge/hgeb2draw/: CMakeLists.txt
hge/hgeb2draw/include/: hgeb2draw.h  hgeb2world.h
hge/hgeb2draw/src/: hgeb2draw.cpp  hgeb2world.cpp
hge/tools/fonted/: CMakeLists.txt  fonted.h  hgeguirange.h  savepng.cpp
hge/tools/fonted/media/: Thumbs.db
hge/tools/particleed/: CMakeLists.txt  particleed.h
lib/: base64.lib  hge.exp  hge.lib  hgehelpers.lib  tinyxml.lib  tmxparser.lib  zlibd.lib
rpg/: CMakeLists.txt
rpg/Math/: IntPoint.h  Math.h  MathUtility  Vector2D.h
rpg/Release/rpg.tlog/: CL.read.1.tlog  cl.command.1.tlog  cl.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
rpg/include/: Camera.h  FileSystem.h  GUI.h  GameEntity.h  IComponent.h  Map.h  NPC.h  PhysicsComponent.h  Player.h  Projector.h  RPG.h  RPG_Debug.h  Spell.h  Trigger.h  TriggerRegion.h  TriggerRegion_Circle.h  Trigger_Portal.h  settings.h
rpg/include/Core/: Core.h  Delegates.rar
rpg/include/Core/Delegates/: Delegate.h  VarArgDelegate.h
rpg/include/Core/HAL/: Platform.h
rpg/include/Core/HAL/GenericPlatform/: GenericApplication.h  GenericPlatform.h  GenericPlatformMath.h  GenericWindow.h  GenericWindowDefinition.h
rpg/include/Core/HAL/Windows/: WindowsApplication.h  WindowsPlatform.h  WindowsPlatformMath.h  WindowsWindow.h
rpg/include/Core/Math/: IntPoint.h  MathUtility.h  Vector2D.h
rpg/include/Core/PAL/: Platform.h  PlatformIncludes.h  PlatformMath.h
rpg/include/Core/PAL/GenericPlatform/: GenericApplication.h  GenericPlatform.h  GenericPlatformMath.h  GenericPlatformMisc_h  GenericWindow.h  GenericWindowDefinition.h
rpg/include/Core/PAL/InputCore/: InputCoreTypes_h
rpg/include/Core/PAL/Windows/: MinWindows.h  WindowsApplication.h  WindowsPlatformIncludes.h  WindowsPlatformMath.h  WindowsPlatformMisc_h  WindowsWindow.h  WindowsWindow_h
rpg/include/Core/Templates/: SharedPointer_h
rpg/include/Engine/: Engine.h  EngineBaseTypes.h  EngineLoop.h  GameEngine.h  GameUserSettings.h  GameViewportClient.h  GameViewportClient_h  Object.h  PrimitiveSceneProxy.h  StaticSpriteSceneProxy.h  Viewport.h  ViewportClient.h
rpg/include/Engine/Atlas/: Atlas.h  CollisionMap.h  Map.h  MapParser.h  TileMap.h
rpg/include/Engine/Camera/: Camera.h
rpg/include/Engine/Components/: ActorComponent.h  BoxComponent.h  IActorComponent.h  IPrimitiveComponent.h  ISceneComponent.h  InputComponent.h  PhysicsComponent.h  PrimitiveComponent.h  SceneComponent.h  SpriteComponent.h  StaticSpriteComponent.h
rpg/include/Engine/GameFramework/: AIController.h  Actor.h  Character.h  Controller.h  InputUnit.h  Pawn.h  Player.h  PlayerController.h  PlayerInput.h  Projector.h  Spell.h  SpellDefines.h  UserSetting.h  menuitem.h
rpg/include/Engine/GameFramework/Triggers/: TriggerRegion.h  TriggerRegion_Circle.h
rpg/include/Engine/Interface/: GUI.h
rpg/include/Game/: RPG.h  settings.h
rpg/include/Renderer/: ScenePrivate.h
rpg/src/: Atlas.cpp  Camera.cpp  CollisionMap.cpp  GUI.cpp  GameEntity.cpp  Map.cpp  Player.cpp  RPG.cpp  RPG_Debug.cpp  TileMap.cpp  Trigger.cpp  Trigger_Portal.cpp  settings.cpp  winmain.cpp
rpg/src/Core/HAL/GenericPlatform/: GenericWindow.cpp
rpg/src/Core/HAL/Windows/: WindowsWindow.cpp
rpg/src/Core/Math/: MathUtility.cpp
rpg/src/Core/PAL/GenericPlatform/: GenericPlatformMisc.cpp  GenericPlatformMisc_cpp
rpg/src/Core/PAL/Windows/: WindowsApplication.cpp  WindowsApplication_cpp  WindowsPlatformMisc.cpp  WindowsPlatformMisc_cpp  WindowsWindow.cpp  WindowsWindow_cpp
rpg/src/Engine/: Core.cpp  Engine.cpp  EngineLoop.cpp  GameEngine.cpp  GameUserSettings.cpp  GameViewportClient.cpp  GuardedMain.cpp  LaunchWindows.cpp  Object.cpp  PrimitiveSceneProxy.cpp  StaticSpriteSceneProxy.cpp
rpg/src/Engine/Atlas/: Atlas.cpp  CollisionMap.cpp  Map.cpp  MapParser.cpp  TileMap.cpp
rpg/src/Engine/Camera/: Camera.cpp
rpg/src/Engine/Components/: ActorComponent.cpp  BoxComponent.cpp  InputComponent.cpp  PrimitiveComponent.cpp  SceneComponent.cpp  SpriteComponent.cpp  StaticSpriteComponent.cpp
rpg/src/Engine/GameFramework/: AIScriptInput.cpp  Actor.cpp  Character.cpp  Controller.cpp  InputUnit.cpp  Pawn.cpp  PlayerInput.cpp  UserSetting.cpp
rpg/src/Engine/GameFramework/Triggers/: Trigger_Portal.cpp
rpg/src/Game/: RPG.cpp  RPG_Debug.cpp  Settings.cpp  winmain.cpp
rpg/src/Renderer/: ScenePrivate.cpp
server/: CMakeLists.txt
server/src/: 111.cpp  Server.cpp
testclient/: CMakeLists.txt
testclient/src/: Client.cpp
(+18 files in other folders)
